# ft_linear_regression

./: .gitignore  Cargo.toml  README.md
benches/: main.rs
src/: config.yaml  data.rs  lib.rs  linear_regression.rs  utils.rs
src/config/: test_config.yaml  train_config.yaml
src/data/: test.csv  thetas  train.csv
tests/: main.rs
