[package]
name = "ft_linear_regression"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.1.13", features = ["derive"] }
csv = "1.2.1"
plotters = "0.3.4"
serde = { version = "1.0.158", features = ["derive"] }
serde_yaml = "0.9.19"
tracing = "0.1.37"
tracing-subscriber = "0.3.16"
